[package]
name = "js_runtime"
version = "0.1.0"
edition = "2021"
authors = ["Fahad Ali"]
description = "A Javascript Runtime built on top of Boa Engine."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[dependencies]
boa_engine = { version = "0.16.0", features = ["console", "deser", "intl", "profiler"] }
argmap = "1.1.2"