[package]
name = "js_runtime"
version = "0.1.0"
edition = "2021"
authors = ["Fahad Ali"]
description = "A Javascript Runtime built on top of Boa Engine."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[dependencies]
commander = "0.1.5"
crossterm = "0.26.1"
tokio = { version = "1", features = ["full"] }
v8 = "0.65.0"